tests/snapshots/netsim__netsim.snap
---
source: tests/netsim.rs
expression: s
---
buf\loss    0.000     0.001     0.010     0.020     0.050     0.100     0.200     0.300 
    128   1279.98   1255.76   1054.15    886.36    538.66    227.84     33.99      7.18
    256   2559.91   2507.27   2100.03   1770.30   1070.71    468.24     66.71     14.35
    512   5119.63   5011.95   4172.36   3531.57   2098.73    942.38    144.73     29.45
   1024  10238.50  10023.19   8340.90   7084.25   4003.34   1869.94    290.74     60.92
   2048  17535.11  17171.82  14093.50  11963.68   7409.35   3424.28    697.60    129.43
   4096  35062.41  33859.80  26942.01  21881.51  13986.43   7730.89   1990.91    437.89
   8192  77374.28  74003.67  58752.65  46303.50  29099.95  15598.69   6625.56   1002.90
  16384 161842.28 159575.12 142682.83 127964.75  94260.92  57969.88  19587.54   3082.00
  32768 322944.88 314492.71 270767.52 231262.82 170001.88 125478.86  42596.45   8880.38
