tests/snapshots/netsim__netsim_cubic.snap
---
source: tests/netsim.rs
expression: "run_sweep(tcp::CongestionControl::Cubic)"
---
buf\loss     0.000     0.001     0.010     0.020     0.050     0.100     0.200     0.300
    128   1279.98   1255.76   1054.15    886.36    538.66    227.84     33.99      7.18
    256   2559.91   2507.27   2100.03   1770.30   1070.71    468.24     66.71     14.35
    512   5119.63   5011.95   4172.36   3531.57   2098.73    942.38    144.73     29.45
   1024  10238.50  10023.19   8340.90   7084.25   4003.34   1869.94    290.74     60.92
   2048  17535.11  17146.84  14322.55  12019.39   7158.14   3444.97    553.54    100.14
   4096  35062.41  33772.12  26464.09  21351.57  13231.78   6350.61   1260.71    195.44
   8192  77374.28  73728.03  49348.96  33833.01  14250.70   4637.85    666.46    108.98
  16384 161802.25 149831.92  58210.71  32013.32  12780.55   4850.20    662.35    108.50
  32768 319167.10 227756.36  56143.84  38587.66  13782.29   4798.60    627.26    117.46
