tests/snapshots/netsim__netsim_reno.snap
---
source: tests/netsim.rs
expression: "run_sweep(tcp::CongestionControl::Reno)"
---
buf\loss    0.000     0.001     0.010     0.020     0.050     0.100     0.200     0.300 
    128   1279.98   1255.76   1054.15    886.36    538.66    227.84     33.99      7.18
    256   2559.91   2507.27   2100.03   1770.30   1070.71    468.24     66.71     14.35
    512   5119.63   5011.95   4172.36   3531.57   2098.73    942.38    144.73     29.45
   1024  10238.50  10023.19   8340.90   7084.25   4003.34   1869.94    290.74     60.92
   2048  17535.11  17146.84  14322.55  12019.39   7158.14   3444.97    553.54    100.14
   4096  35062.41  33793.88  26596.27  21540.30  13496.64   6721.40   1195.34    194.89
   8192  77374.28  71776.52  47381.33  33619.70  14781.23   4432.25    584.75    101.72
  16384 161802.25 127015.92  52555.01  31787.87  12594.09   3994.01    684.36    117.17
  32768 319167.10 148471.34  49784.25  29690.97  12285.84   4608.46    635.53    108.59
